@@ -476,3 +476,5 @@ Change list for PernMangband
 19/12/2001 (Jir)
 - Magic mapping disallowed inside NOMAP dungeons.
 - Traps can be generated under items.
+- 3 new traps.
+- a bug in trap disarming fixed.
